# space-efficient-sumcheck

./: .gitignore  Cargo.toml  README.md
benches/eval-microbenches/: Cargo.toml
benches/eval-microbenches/src/: main.rs
benches/lag-poly-benches/src/: main.rs
benches/sumcheck-benches/: Cargo.toml  run_benches.sh
benches/sumcheck-benches/src/: main.rs
benches/sumcheck-benches/src/validation/: mod.rs
src/interpolation/: equality_polynomial.rs  field_mul_small.rs  lagrange_polynomial.rs  mod.rs  multivariate.rs  recursive_toom.rs  univariate.rs
src/multilinear/: sumcheck.rs
src/multilinear/provers/blendy/: prover.rs
src/multilinear/provers/space/: prover.rs
src/multilinear/provers/time/: prover.rs  time.rs
src/multilinear_product/: mod.rs  scheduling.rs  sumcheck.rs
src/multilinear_product/provers/: mod.rs
src/multilinear_product/provers/blendy/: blendy.rs  prover.rs
src/multilinear_product/provers/eval_product/: config.rs  eval_product.rs  mod.rs  prover.rs
src/multilinear_product/provers/eval_toom/: config.rs  eval_toom.rs  mod.rs  prover.rs
src/multilinear_product/provers/improved_time/: config.rs  improved_time.rs  mod.rs  prover.rs
src/multilinear_product/provers/space/: prover.rs  space.rs
src/multilinear_product/provers/time/: prover.rs  time.rs
src/multilinear_product/provers/time_with_eq/: config.rs  mod.rs  prover.rs  time_with_eq.rs
src/prover/: prover.rs
src/tests/: blendy_correctness.rs  debug_eval_product.rs  debug_multivariate.rs  debug_schedule.rs  fields.rs  hard_stop_test.rs  large_d_scheduling.rs  mod.rs  multivariate.rs  schedule_comparison.rs  window_schedule_audit.rs
src/tests/multilinear/: mod.rs
src/tests/multilinear_product/: consistency.rs  eval_product.rs  generic_d.rs  improved_time.rs  mod.rs  sanity.rs
src/tests/multilinear_product/provers/basic/: basic.rs  prover.rs
