[package]
name = "space-efficient-sumcheck"
version = "0.0.2"
authors = ["arkworks maintainers"]
description = "TODO"
repository = "https://github.com/compsec-epfl/space-efficient-sumcheck"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-std ="0.5.0"
ark-bn254 = "0.5.0"
memmap2 = "0.9.5"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-ff-macros = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }

[[bench]]
name = "explanation"
harness = false
