[package]
name = "sumcheck-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-std ="0.5.0"
ark-bn254 = "0.5.0"
space-efficient-sumcheck = { path = "../../." }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-ff-macros = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }


[profile.release]
debug = true
